syntax = "proto3";

package proto;

option java_multiple_files = true;

message Construct {
  string name = 1;
  string symbol = 2;
  int32 decimals = 3;
}

message Mint {
  string address = 1;
  uint64 quantity = 2;
}

message Transfer {
  string toAddress = 1;
  uint64 quantity = 2;
}

message Approve {
  string spender = 1;
  uint64 amount = 2;
}

message IncreaseAllowance {
  string spender = 1;
  uint64 addedValue = 2;
}

message DecreaseAllowance {
  string spender = 1;
  uint64 subtractedValue = 2;
}

message TransferFrom {
  string fromAddress = 1;
  string toAddress = 2;
  uint64 amount = 3;
}

message Burn {
  uint64 amount = 1;
}

message Join {
  string address = 1;
}

message PrimitiveHeader {
  bytes signature = 1;
  string publicKey = 2;
  uint64 random = 3;
}

message Primitive {
  PrimitiveHeader header = 1;

  oneof primitive {
    Construct construct = 10;
    Mint mint = 11;
    Transfer transfer = 12;
    Join join = 13;
    Approve approve = 14;
    IncreaseAllowance increaseAllowance = 15;
    DecreaseAllowance decreaseAllowance = 16;
    TransferFrom transferFrom = 17;
    Burn burn = 18;
  }
}